--- a/BEDA/GraphController.xib
+++ b/BEDA/GraphController.xib
@@ -15,6 +15,8 @@
 			<string>NSButton</string>
 			<string>NSButtonCell</string>
 			<string>NSCustomObject</string>
+			<string>NSMenu</string>
+			<string>NSMenuItem</string>
 			<string>NSTabView</string>
 			<string>NSUserDefaultsController</string>
 			<string>NSView</string>
@@ -58,7 +60,8 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{428, 370}, {118, 32}}</string>
 							<reference key="NSSuperview" ref="261722634"/>
-							<reference key="NSNextKeyView" ref="1009239148"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="664313726"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="875188007">
@@ -86,6 +89,7 @@
 							<int key="NSvFlags">12</int>
 							<string key="NSFrame">{{60, 411}, {508, 235}}</string>
 							<reference key="NSSuperview" ref="261722634"/>
+							<reference key="NSWindow"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<array class="NSMutableArray" key="NSTabViewItems"/>
 							<reference key="NSFont" ref="1058085457"/>
@@ -97,8 +101,9 @@
 						<object class="NSButton" id="1009239148">
 							<reference key="NSNextResponder" ref="261722634"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{415, 117}, {131, 32}}</string>
+							<string key="NSFrame">{{415, 13}, {131, 32}}</string>
 							<reference key="NSSuperview" ref="261722634"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -123,6 +128,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{437, 646}, {109, 32}}</string>
 							<reference key="NSSuperview" ref="261722634"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="499092198"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -145,8 +151,9 @@
 						<object class="NSTabView" id="664313726">
 							<reference key="NSNextResponder" ref="261722634"/>
 							<int key="NSvFlags">12</int>
-							<string key="NSFrame">{{57, 152}, {511, 212}}</string>
+							<string key="NSFrame">{{57, 43}, {511, 321}}</string>
 							<reference key="NSSuperview" ref="261722634"/>
+							<reference key="NSWindow"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<array class="NSMutableArray" key="NSTabViewItems"/>
 							<reference key="NSFont" ref="1058085457"/>
@@ -158,6 +165,7 @@
 					</array>
 					<string key="NSFrameSize">{606, 703}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="423248197"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -167,6 +175,41 @@
 			</object>
 			<object class="NSUserDefaultsController" id="768157412">
 				<bool key="NSSharedInstance">YES</bool>
+			</object>
+			<object class="NSMenu" id="276027544">
+				<string key="NSTitle"/>
+				<array class="NSMutableArray" key="NSMenuItems">
+					<object class="NSMenuItem" id="1040593623">
+						<reference key="NSMenu" ref="276027544"/>
+						<string key="NSTitle">Item 1</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<object class="NSCustomResource" key="NSOnImage" id="136834650">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">NSMenuCheckmark</string>
+						</object>
+						<object class="NSCustomResource" key="NSMixedImage" id="492289612">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">NSMenuMixedState</string>
+						</object>
+					</object>
+					<object class="NSMenuItem" id="516547838">
+						<reference key="NSMenu" ref="276027544"/>
+						<string key="NSTitle">Item 2</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="136834650"/>
+						<reference key="NSMixedImage" ref="492289612"/>
+					</object>
+					<object class="NSMenuItem" id="210853343">
+						<reference key="NSMenu" ref="276027544"/>
+						<string key="NSTitle">Item 3</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="136834650"/>
+						<reference key="NSMixedImage" ref="492289612"/>
+					</object>
+				</array>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -250,23 +293,22 @@
 						<int key="objectID">257</int>
 						<reference key="object" ref="261722634"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1009239148"/>
 							<reference ref="423248197"/>
 							<reference ref="922741256"/>
-							<object class="IBNSLayoutConstraint" id="386288476">
+							<object class="IBNSLayoutConstraint" id="772163660">
 								<reference key="firstItem" ref="261722634"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="1009239148"/>
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">124</double>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">20</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="261722634"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
+								<int key="scoringType">8</int>
+								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="721000603">
@@ -349,7 +391,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="975423066">
+							<object class="IBNSLayoutConstraint" id="46567490">
 								<reference key="firstItem" ref="261722634"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -357,7 +399,7 @@
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">162</double>
+									<double key="value">53</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="261722634"/>
@@ -479,6 +521,7 @@
 							</object>
 							<reference ref="499092198"/>
 							<reference ref="664313726"/>
+							<reference ref="1009239148"/>
 						</array>
 						<reference key="parent" ref="950922147"/>
 					</object>
@@ -553,11 +596,6 @@
 						<reference key="parent" ref="261722634"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">276</int>
-						<reference key="object" ref="386288476"/>
-						<reference key="parent" ref="261722634"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">277</int>
 						<reference key="object" ref="875188007"/>
 						<reference key="parent" ref="922741256"/>
@@ -609,9 +647,39 @@
 						<reference key="parent" ref="261722634"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">543</int>
-						<reference key="object" ref="975423066"/>
+						<int key="objectID">544</int>
+						<reference key="object" ref="772163660"/>
 						<reference key="parent" ref="261722634"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">545</int>
+						<reference key="object" ref="46567490"/>
+						<reference key="parent" ref="261722634"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">546</int>
+						<reference key="object" ref="276027544"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="1040593623"/>
+							<reference ref="516547838"/>
+							<reference ref="210853343"/>
+						</array>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">547</int>
+						<reference key="object" ref="1040593623"/>
+						<reference key="parent" ref="276027544"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">548</int>
+						<reference key="object" ref="516547838"/>
+						<reference key="parent" ref="276027544"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">549</int>
+						<reference key="object" ref="210853343"/>
+						<reference key="parent" ref="276027544"/>
 					</object>
 				</array>
 			</object>
@@ -629,13 +697,13 @@
 					<reference ref="30615757"/>
 					<reference ref="68698937"/>
 					<reference ref="334066756"/>
-					<reference ref="975423066"/>
+					<reference ref="46567490"/>
 					<reference ref="320048170"/>
 					<reference ref="517631047"/>
 					<reference ref="583173734"/>
 					<reference ref="786399703"/>
 					<reference ref="721000603"/>
-					<reference ref="386288476"/>
+					<reference ref="772163660"/>
 				</array>
 				<string key="257.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="NO" key="258.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
@@ -654,7 +722,6 @@
 				<string key="273.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="274.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="275.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="276.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="277.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="336.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="337.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -666,19 +733,123 @@
 				<string key="527.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="528.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="542.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="543.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="544.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="545.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="546.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="547.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="548.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="549.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">543</int>
+			<int key="maxID">549</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CPTGraphHostingView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CPTGraphHostingView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DataManager</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DataManager.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">GraphViewController</string>
+					<string key="superclassName">NSObject</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="dm">DataManager</string>
+						<string key="hostView">CPTGraphHostingView</string>
+						<string key="view">NSView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="dm">
+							<string key="name">dm</string>
+							<string key="candidateClassName">DataManager</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="hostView">
+							<string key="name">hostView</string>
+							<string key="candidateClassName">CPTGraphHostingView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="view">
+							<string key="name">view</string>
+							<string key="candidateClassName">NSView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/GraphViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">GraphWindowController</string>
+					<string key="superclassName">NSObject</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="onAddGraph:">id</string>
+						<string key="onApplySettings:">id</string>
+						<string key="openFile:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="onAddGraph:">
+							<string key="name">onAddGraph:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onApplySettings:">
+							<string key="name">onApplySettings:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="openFile:">
+							<string key="name">openFile:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="graphControlTabview">NSTabView</string>
+						<string key="tabview">NSTabView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="graphControlTabview">
+							<string key="name">graphControlTabview</string>
+							<string key="candidateClassName">NSTabView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tabview">
+							<string key="name">tabview</string>
+							<string key="candidateClassName">NSTabView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/GraphWindowController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NSMenuCheckmark">{11, 11}</string>
+			<string key="NSMenuMixedState">{10, 3}</string>
+		</dictionary>
 		<bool key="IBDocument.UseAutolayout">YES</bool>
 	</data>
 </archive>
